test/errors/traits/associated_type_not_found_in_trait/main.sk
module Main {

protocol A[T] {

}

struct B {

}

impl AImpl A[B] {
    type Foo = B
}

fn main() {

}

}